# ChangeLog for dev-perl/Net-DNS
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.85 2006/06/29 17:20:28 gustavoz Exp $

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> Net-DNS-0.57.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> Net-DNS-0.55.ebuild,
  Net-DNS-0.57.ebuild:
  Marking sparc stable

  06 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  Net-DNS-0.53-r1.ebuild:
  Stable on amd64 for bug #135746.

  06 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Net-DNS-0.53-r1.ebuild:
  ppc stable

*Net-DNS-0.57 (01 May 2006)

  01 May 2006; <mcumming@gentoo.org> +Net-DNS-0.57.ebuild:
  Version bump

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-Net-DNS-0.48,
  files/digest-Net-DNS-0.49, files/digest-Net-DNS-0.55, Manifest:
  Fixing SHA256 digest, pass four

  24 Apr 2006; Joshua Kinard <kumba@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Marked stable on mips.

  19 Mar 2006; Markus Rothe <corsair@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Stable on ppc64

  14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Net-DNS-0.53-r1.ebuild:
  Stable on hppa

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Added ~mips to KEYWORDS.

  14 Feb 2006; Mark Loeser <halcy0n@gentoo.org> Net-DNS-0.48.ebuild,
  Net-DNS-0.49.ebuild:
  Trim trailing spaces

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> Net-DNS-0.48.ebuild,
  Net-DNS-0.49.ebuild, Net-DNS-0.53.ebuild, Net-DNS-0.53-r1.ebuild,
  Net-DNS-0.55.ebuild:
  Virtuals for perl-core

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> Net-DNS-0.53-r1.ebuild:
  Mark 0.53-r1 stable on alpha

  28 Jan 2006; Markus Rothe <corsair@gentoo.org> Net-DNS-0.53-r1.ebuild,
  Net-DNS-0.55.ebuild:
  Added ~ppc64

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> Net-DNS-0.55.ebuild:
  Added to ~hppa, ~ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>