@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.48.ebuild,v 1.16 2006/02/14 01:29:52 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.48.ebuild,v 1.17 2006/07/04 13:34:37 ian Exp $
 
 inherit perl-module
 
@@ -20,6 +20,7 @@ DEPEND="virtual/perl-Digest-MD5
 		dev-perl/Digest-HMAC
 		virtual/perl-MIME-Base64
 		virtual/perl-Test-Simple"
+RDEPEND="${DEPEND}"
 mydoc="TODO"
 
 src_compile() {
