@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.53.ebuild,v 1.4 2006/03/12 07:52:00 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/Net-DNS-0.53.ebuild,v 1.5 2006/07/04 13:34:37 ian Exp $
 
 inherit perl-module
 
@@ -18,6 +18,7 @@ DEPEND="virtual/perl-Digest-MD5
 	dev-perl/Net-IP
 	virtual/perl-MIME-Base64
 	virtual/perl-Test-Simple"
+RDEPEND="${DEPEND}"
 
 #SRC_TEST="do"
 mydoc="TODO"
